use cochez.consulting instead of www.cochezconsult.be + use browsersync

--- a/site/index.html
+++ b/site/index.html
@@ -17,13 +17,15 @@
     <section>
       <ul class="meta">
         <li>
-          <span class="prefix">email:</span><a href="mailto:ben@cochezconsult.be?subject=Hi, Ben!">ben@cochezconsult.be</a>
+          <span class="prefix">email:</span><a href="mailto:ben@cochez.consulting?subject=Hi, Ben!">ben@cochez.consulting</a>
         </li>
         <li>
           <span class="prefix">phone number:</span>
           <span>available upon request</span>
         </li>
         <li><a href="http://be.linkedin.com/in/bencochez/">linkedin</a></li>
+        <li><a href="http://twitter.com/bencochez/">twitter</a></li>
+        <li><a href="http://github.com/benc/">github</a></li>
       </ul>
     </section>
   </div>
