--- a/src/index.html
+++ b/src/index.html
@@ -17,15 +17,15 @@
     <section>
       <ul class="meta">
         <li>
-          <span class="prefix">email:</span><a href="mailto:ben@cochez.consulting?subject=Hi, Ben!">ben@cochez.consulting</a>
+          <span class="prefix">email:</span> <a href="mailto:ben@cochez.consulting?subject=Hi, Ben!">ben@cochez.consulting</a>
         </li>
         <li>
-          <span class="prefix">phone number:</span>
-          <span>available upon request</span>
+          <span class="prefix">phone number:</span> <span>available upon request</span>
         </li>
+        <li><a href="http://careers.stackoverflow.com/bencochez">stack overflow careers</a></li>
         <li><a href="http://be.linkedin.com/in/bencochez/">linkedin</a></li>
-        <li><a href="http://twitter.com/bencochez/">twitter</a></li>
         <li><a href="http://github.com/benc/">github</a></li>
+        <li><a href="http://twitter.com/bencochez/">twitter</a></li>
       </ul>
     </section>
   </div>
