--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
         <li>
           <span class="prefix">phone number:</span> <span>available upon request</span>
         </li>
+        <li><a href="http://heavyindustries.io/">my blog</a></li>
         <li><a href="http://careers.stackoverflow.com/bencochez">stack overflow careers</a></li>
         <li><a href="http://be.linkedin.com/in/bencochez/">linkedin</a></li>
         <li><a href="http://github.com/benc/">github</a></li>
