--- a/src/index.html
+++ b/src/index.html
@@ -14,15 +14,16 @@
     <header>
       <h1>cochez consult</h1>
     </header>
-    <section>
+    <section class="h-card">
+      <p class="fn p-name">Ben Cochez</p>
       <ul class="meta">
         <li>
-          <span class="prefix">email:</span> <a href="mailto:ben@cochez.consulting?subject=Hi, Ben!">ben@cochez.consulting</a>
+          <span class="prefix">email:</span> <a class="u-email" href="mailto:ben@cochez.consulting?subject=Hi, Ben!">ben@cochez.consulting</a>
         </li>
         <li>
           <span class="prefix">phone number:</span> <span>available upon request</span>
         </li>
-        <li><a href="http://heavyindustries.io/">my blog</a></li>
+        <li><a class="u-url" href="http://heavyindustries.io/">my blog</a></li>
         <li><a href="http://careers.stackoverflow.com/bencochez">stack overflow careers</a></li>
         <li><a href="http://be.linkedin.com/in/bencochez/">linkedin</a></li>
         <li><a href="http://github.com/benc/">github</a></li>
