update ga tracking snippet

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,22 @@
   <title>cochez consult</title>
   <link href="http://fonts.googleapis.com/css?family=Lato:100,300,400" rel="stylesheet" type="text/css">
   <link href="styles/style.css" media="screen" rel="stylesheet" type="text/css">
+  <script>
+    (function(i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r;
+      i[r] = i[r] || function() {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date();
+      a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0];
+      a.async = 1;
+      a.src = g;
+      m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'UA-38982355-3', 'auto');
+    ga('send', 'pageview');
+  </script>
 </head>
 
 <body>
@@ -21,7 +37,8 @@
           <span class="prefix">email:</span> <a class="u-email" href="mailto:ben@cochez.consulting?subject=Hi, Ben!">ben@cochez.consulting</a>
         </li>
         <li>
-          <span class="prefix">phone number:</span> <span>available upon request</span>
+          <span class="prefix">phone number:</span>
+          <span>available upon request</span>
         </li>
         <li><a class="u-url" href="http://heavyindustries.io/">my blog</a></li>
         <li><a href="http://careers.stackoverflow.com/bencochez">stack overflow careers</a></li>
@@ -31,18 +48,6 @@
       </ul>
     </section>
   </div>
-  <script type="text/javascript">
-    var _gaq = [
-      ['_setAccount', 'UA-38982355-7'],
-      ['_trackPageview']
-    ];
-    (function(d, t) {
-      var g = d.createElement(t),
-        s = d.getElementsByTagName(t)[0];
-      g.src = ('https:' == location.protocol ? '//ssl' : '//www') + '.google-analytics.com/ga.js';
-      s.parentNode.insertBefore(g, s)
-    }(document, 'script'));
-  </script>
 </body>
 
 </html>
